Modules refactor cont. sample alg extraction